@@ -1,24 +1,25 @@
 # Reference
+
 <!-- DO NOT EDIT: This document was generated by Puppet Strings -->
 
 ## Table of Contents
 
-**Classes**
+### Classes
 
 * [`svckill`](#svckill): Svckill is a system that attempts to run with the security best practice that "No unnecessary services should be running on the system."  The
 * [`svckill::ignore::collector`](#svckillignorecollector): Build the default ignore file used by the ``svckill::ignore`` define.
 
-**Defined types**
+### Defined types
 
 * [`svckill::ignore`](#svckillignore): Ensure that service ``$name`` will not be killed by svckill
 
-**Resource types**
+### Resource types
 
 * [`svckill`](#svckill): Disables all services (recognized by the 'service' resource)  that are not defined in your Puppet manifests or listed.   Any services listed 
 
 ## Classes
 
-### svckill
+### `svckill`
 
 Svckill is a system that attempts to run with the security best
 practice that "No unnecessary services should be running on the
@@ -49,7 +50,7 @@ Data type: `Boolean`
 
 Enable svckill on the system
 
-Default value: `true`
+Default value: ``true``
 
 ##### `ignore`
 
@@ -57,7 +58,7 @@ Data type: `Array[String]`
 
 A list of services to never kill
 
-Default value: []
+Default value: `[]`
 
 ##### `ignore_defaults`
 
@@ -65,7 +66,7 @@ Data type: `Array[String]`
 
 An internal list of embedded services to never kill
 
-Default value: []
+Default value: `[]`
 
 ##### `ignore_files`
 
@@ -78,7 +79,7 @@ A list of files that contain services to never kill, one per line
 * The file specified in ``default_ignore_file`` will always be used but is
   fully managed by puppet
 
-Default value: []
+Default value: `[]`
 
 ##### `mode`
 
@@ -93,7 +94,7 @@ The strategy svckill should use when it encounters undeclared services.
   without actually making the changes to the system.
   attempted to kill
 
-Default value: 'warning'
+Default value: `'warning'`
 
 ##### `verbose`
 
@@ -104,9 +105,9 @@ Report on exactly what ``svckill`` attempted to kill
 * If ``false``, it will only report on the number of services that it
   attempted to kill
 
-Default value: `true`
+Default value: ``true``
 
-### svckill::ignore::collector
+### `svckill::ignore::collector`
 
 Build the default ignore file used by the ``svckill::ignore`` define.
 
@@ -120,11 +121,11 @@ Data type: `Stdlib::Absolutepath`
 
 The path to the ignore file
 
-Default value: '/usr/local/etc/svckill.ignore'
+Default value: `'/usr/local/etc/svckill.ignore'`
 
 ## Defined types
 
-### svckill::ignore
+### `svckill::ignore`
 
 Ensure that service ``$name`` will not be killed by svckill
 
@@ -140,7 +141,7 @@ The name of the service to prevent being killed
 
 ## Resource types
 
-### svckill
+### `svckill`
 
 Disables all services (recognized by the 'service' resource)
  that are not defined in your Puppet manifests or listed.
@@ -201,20 +202,11 @@ without actually making the changes to the system.
 
 Default: 'warning'
 
-Default value: warning
+Default value: `warning`
 
 #### Parameters
 
 The following parameters are available in the `svckill` type.
-
-##### `name`
-
-namevar
-
-A static name assigned to this type. You can only declare
-this type of resource once in your node scope.
-
-Default value: svckill
 
 ##### `ignore`
 
@@ -225,13 +217,27 @@ An array of services to never kill. Can also accept a regex.
 An array of files containing a list of services to ignore, one per line.
 Can also accept regexes in the file.
 
-Default value: /usr/local/etc/svckill.ignore
+Default value: `/usr/local/etc/svckill.ignore`
+
+##### `name`
+
+namevar
+
+A static name assigned to this type. You can only declare
+this type of resource once in your node scope.
+
+Default value: `svckill`
+
+##### `provider`
+
+The specific backend to use for this `svckill` resource. You will seldom need to specify this --- Puppet will usually
+discover the appropriate provider for your platform.
 
 ##### `verbose`
 
-Valid values: `true`, `false`
+Valid values: ``true``, ``false``
 
 If set, output all services that were affected by svckill.
 
-Default value: `true`
+Default value: ``true``
 
